--- a/study/0701/package.json
+++ b/study/0701/package.json
@@ -1,9 +1,11 @@
 {
   "name": "0701",
   "version": "1.0.0",
-  "main": "hello.js",
+  "main": "src/index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "ts-node src",
+    "build": "tsc && node src"
   },
   "keywords": [],
   "author": "",
