--- a/smallprojects/small-project3/cinemaroad/package.json
+++ b/smallprojects/small-project3/cinemaroad/package.json
@@ -46,6 +46,7 @@
   },
   "devDependencies": {
     "@tailwindcss/line-clamp": "^0.4.4",
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/chance": "^1.1.7",
     "@types/luxon": "^3.6.2",
     "autoprefixer": "^10.4.21",
