--- a/smallprojects/small-project2/emotionalmusic/package.json
+++ b/smallprojects/small-project2/emotionalmusic/package.json
@@ -15,7 +15,9 @@
     "@types/react-dom": "^19.1.6",
     "@types/react-router-dom": "^5.3.3",
     "chance": "^1.1.13",
+    "express": "^5.1.0",
     "luxon": "^3.7.1",
+    "node-fetch": "^3.3.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
