--- a/smallprojects/small-project2/emotionalmusic/package.json
+++ b/smallprojects/small-project2/emotionalmusic/package.json
@@ -9,14 +9,20 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/jest": "^27.5.2",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@types/react-router-dom": "^5.3.3",
+    "bcryptjs": "^3.0.2",
     "chance": "^1.1.13",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "luxon": "^3.7.1",
+    "mongoose": "^8.17.1",
     "node-fetch": "^3.3.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -32,7 +38,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "node server.js",
+    "dev": "concurrently \"npm run server\" \"npm run start\"",
+    "server:dev": "nodemon server.js"
   },
   "eslintConfig": {
     "extends": [
@@ -58,8 +67,10 @@
     "@types/chance": "^1.1.7",
     "@types/luxon": "^3.6.2",
     "autoprefixer": "^10.4.21",
+    "concurrently": "^9.2.0",
     "daisyui": "^4.12.12",
     "framer-motion": "^12.23.6",
+    "nodemon": "^3.1.10",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17"
   }
